added media quries updated js proofreading

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Skeptic Quiz App Wireframe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="A quiz short quiz that tests your knowledge of skepticism and its history.">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
 </head>
@@ -13,11 +14,11 @@
         <h1>Skeptic Quiz</h1>
     </header>
     <main role = "main">
-        <div class = "row">
+        <div>
             <h2>How much do you know about skepticism?</h2>
         </div>
         <form>
-            <div class = "row">
+            <div>
                 <input class = "start navButton" type = "button" value = "Start">
             </div>
         </form>
