--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Skeptic Quiz</h1>
     </header>
     <main role = "main">
-        <div>
+        <div class="heading2">
             <h2>How much do you know about skepticism?</h2>
         </div>
         <form>
